# edfio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/source/: conf.py  examples.md  index.md  reference.rst
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: class.rst  exception.rst
edfio/: __init__.py  _header_field.py  _lazy_loading.py  _utils.py  edf.py  edf_annotations.py  edf_async.py  edf_header.py  edf_signal.py
tests/: __init__.py  conftest.py  create_edf_plus_d_testfile.py  generate_test_data.py  test_edf.py  test_edf_annotations.py  test_edf_header.py  test_edf_signal.py  test_edfplus_annotations.py  test_edfplus_header.py  test_faq.py  test_header_field.py  test_lazy_loading.py  test_onset_timemap.py  test_programming_guidelines.py  test_utils.py
tests/TEST_DATA/: SC4001EC-Hypnogram.bdf  SC4001EC-Hypnogram.edf  mne_test.bdf  mne_test.edf  short_psg.bdf  short_psg.edf  short_psg_header_reference.json  test_subsecond.bdf  test_subsecond.edf
