[tool.poetry]
name = "edfio"
version = "0.0.0"
description = "Read and write EDF/EDF+ files."
license = "Apache-2.0"
authors = ["The Siesta Group <opensource@thesiestagroup.com>"]
readme = "README.md"
repository = "https://github.com/the-siesta-group/edfio"
documentation = "https://edfio.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"
pre-commit = "3.5.0"
mypy = "1.6.1"
ruff = "0.3.4"
sphinx = "7.2.6"
myst-parser = "2.0.0"
pydata-sphinx-theme = "0.14.3"
numpydoc = "1.6.0"

[tool.poetry-dynamic-versioning]
vcs = "git"
style = "semver"
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
target-version = "py39"
fix = true

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "FBT",
    "B",
    "C4",
    "T10",
    "ICN",
    "PIE",
    "PT",
    "RET",
    "TID",
    "PTH",
    "PL",
    "RUF",
]
ignore = ["E501", "E741", "B028", "D100", "D104", "D105", "PLR0913"]
fixable = ["I001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "B018", "D"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unreachable = true
strict_equality = true
pretty = true
packages = ["edfio"]

[tool.coverage.report]
exclude_also = ["@abstractmethod", "@overload"]
