[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "edfio"
description = "Read and write EDF/EDF+ files."
license = { text = "Apache-2.0" }
authors = [
    { name = "The Siesta Group", email = "opensource@thesiestagroup.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.22.0"
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[tool.hatch.build.targets.sdist]
only-include = ["edfio"]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pre-commit==3.5.0",
    "mypy==1.6.1",
    "ruff==0.3.4",
    "sphinx==7.2.6",
    "myst-parser==2.0.0",
    "pydata-sphinx-theme==0.14.3",
    "numpydoc==1.6.0"
]

[project.urls]
repository = "https://github.com/the-siesta-group/edfio"
documentation = "https://edfio.readthedocs.io"

[tool.hatch.version]
source = "vcs"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unreachable = true
strict_equality = true
pretty = true
warn_unused_ignores = true
packages = ["edfio"]

[tool.ruff]
target-version = "py39"
fix = true

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "FBT",
    "B",
    "C4",
    "T10",
    "ICN",
    "PIE",
    "PT",
    "RET",
    "TID",
    "PTH",
    "PL",
    "RUF",
]
ignore = ["E501", "E741", "B028", "D100", "D104", "D105", "PLR0913"]
fixable = ["I001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "B018", "D"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
